some decoration affichpe-post
using css  image.hover
box-shadows

--- a/web/trysomecode.html
+++ b/web/trysomecode.html
@@ -8,27 +8,32 @@
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script>
-        $(function() {
-            $( "#dialog" ).dialog();
-        } );
-        function aaa() {
-            $(function() {
-                $( "#dialog" ).dialog();
-            } );
-        }
-    </script>
-</head>
-<bodyve>
 
-<div id="dialog" title="Basic dialog">
-    <p>fesgrdhfthg</p>
+
+
+
+        <style>
+            div.polaroidpost {
+                width: 284px;
+                padding: 10px 10px 20px 10px;
+                border: 1px solid #BFBFBF;
+                background-color: white;
+                box-shadow: 10px 10px 5px #aaaaaa;
+            }
+        </style>
+
+<body>
+
+<div class="polaroidpost">
+    <img src="pulpitrock.jpg" alt="Pulpit rock" width="284" height="213">
+    <p class="caption">The pulpit rock in Lysefjorden, Norway.</p>
 </div>
-<div onclick="aaa()">qrewtrdyjykgj</div>
-<embed wmode="transparent" src="https://www.xatech.com/web_gear/chat/chat.swf" quality="high" width="540" height="405" name="chat" FlashVars="id=219877451" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="https://xat.com/update_flash.php" /><br><small><a target="_BLANK" href="https://xat.com/web_gear/?cb">Get your own Chat Box!</a> <a target="_BLANK" href="https://xat.com/web_gear/chat/go_large.php?id=219877451">Go Large!</a></small><br>
-<br><br><br><br><br><br><br><br>
-<a onclick="cccc();">werefdhg</a>
+<br><br>
+<div class="polaroidpost">
+    <img src="cinqueterre.jpg" alt="Monterosso al Mare" width="284" height="213">
+    <p class="caption">Monterosso al Mare. One of the five villages in Cinque Terre, Italy.</p>
+</div>
 
-<input type="button" onclick="location.href = 'www.yoursite.com';">
-</bodyve>
+</body>
 </html>
+
